<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosimg</name>
  <version>0.0.1</version>
  <description>ROS2 image viewer</description>
  <maintainer email="aliaksei.katovich@gmail.com">Aliaksei Katovich</maintainer>
  <license>0BSD</license>
  <author>Aliaksei Katovich</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
